Update to 5.0-nightly

--- a/DSharpPlus.VoiceNext/DSharpPlus.VoiceNext.csproj
+++ b/DSharpPlus.VoiceNext/DSharpPlus.VoiceNext.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PackageId>DSharpPlus.VoiceNext</PackageId>
     <Description>Voice implementation for DSharpPlus.</Description>
-    <PackageTags>$(PackageTags), audio, voice, radio, music</PackageTags>
+    <PackageTags>audio, voice, radio, music</PackageTags>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="$(ProjectRoot)\DSharpPlus\DSharpPlus.csproj" />
+    <ProjectReference Include="..\DSharpPlus\DSharpPlus.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DSharpPlus.VoiceNext.Natives"/>
