--- a/DSharpPlus.Rest/DSharpPlus.Rest.csproj
+++ b/DSharpPlus.Rest/DSharpPlus.Rest.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <PackageId>DSharpPlus.Rest</PackageId>
-    <Description>A Rest-only client for DSharpPlus.</Description>
-    <PackageTags>$(PackageTags), rest-api, oauth2</PackageTags>
-    <IsPackable>true</IsPackable>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="$(ProjectRoot)\DSharpPlus\DSharpPlus.csproj" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <PackageId>DSharpPlus.Rest</PackageId>
+        <Description>A Rest-only client for DSharpPlus.</Description>
+        <PackageTags>rest-api, oauth2</PackageTags>
+        <IsPackable>true</IsPackable>
+    </PropertyGroup>
+    <ItemGroup>
+        <ProjectReference Include="$(ProjectRoot)\DSharpPlus\DSharpPlus.csproj" />
+    </ItemGroup>
 </Project>
