--- a/DSharpPlus/DSharpPlus.csproj
+++ b/DSharpPlus/DSharpPlus.csproj
@@ -5,8 +5,9 @@
         <Description>A C# API for Discord based off DiscordSharp, but rewritten to fit the API standards.</Description>
         <PackageTags>$(PackageTags), webhooks</PackageTags>
         <IsPackable>true</IsPackable>
-    </PropertyGroup>
-    <ItemGroup>
+		<Configurations>Debug;Release;Staging</Configurations>
+	</PropertyGroup>
+	<ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" />
         <PackageReference Include="Newtonsoft.Json" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
